--- a/diapos/SFCR_Diseno.tex
+++ b/diapos/SFCR_Diseno.tex
@@ -1,390 +1,272 @@
-\documentclass[serif, xcolor=dvipsnames]{beamer}
-
-\makeatletter
-
-% HAY QUE ELEGIR EL QUE CORRESPONDA
-
-%\input{FormatoImprimir.tex} 
-%\input{FormatoUPM.tex}
-\input{FormatoEOI.tex}
-
-\makeatother
-
-\usepackage[spanish]{babel}
-\addto\shorthandsspanish{\spanishdeactivate{~<>}}
-
+% Created 2015-01-20 mar 00:27
+\documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{fixltx2e}
+\usepackage{graphicx}
+\usepackage{longtable}
+\usepackage{float}
+\usepackage{wrapfig}
+\usepackage{rotating}
+\usepackage[normalem]{ulem}
+\usepackage{amsmath}
+\usepackage{textcomp}
+\usepackage{marvosym}
+\usepackage{wasysym}
+\usepackage{amssymb}
+\usepackage{hyperref}
+\tolerance=1000
+\usepackage{color}
+\usepackage{listings}
+\usepackage{mathpazo}
+\usepackage{gensymb}
+\usepackage{amsmath}
+\bibliographystyle{plain}
+\AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
+\AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
+\usepackage[emulate=units]{siunitx}
+\sisetup{per=fraction, fraction=nice, decimalsymbol=comma}
+\newunit{\wattpeak}{Wp}
+\newunit{\watthour}{Wh}
+\newunit{\amperehour}{Ah}
+\hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
+\setbeamercolor{alerted text}{fg=red!50!black} \setbeamerfont{alerted text}{series=\bfseries}
+\usetheme[hideothersubsections]{Goettingen}
+\usecolortheme{rose}
+\usefonttheme{serif}
+\author{Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}}
+\date{}
+\title{SFCR: Diseño}
+\hypersetup{
+  pdfkeywords={},
+  pdfsubject={},
+  pdfcreator={Emacs 24.4.1 (Org mode 8.2.7c)}}
 \begin{document}
 
-\title[\textsc{SFCR: Diseño}]{\textsc{Sistemas Fotovoltaicos }\\
-  \textsc{de Conexión a Red}}
-
-\subtitle{Diseño}
-
-
-\author{\textsc{Oscar Perpiñán Lamigueiro}} \date{}
-
-\frame[plain]{\titlepage}
-
-\AtBeginSection[]{
-  \begin{frame}[plain]
-    \frametitle{Índice}
-    % \setcounter{tocdepth}{1}
-    \tableofcontents[currentsection]
-  \end{frame}
-
-}
-
-\selectlanguage{spanish}%
+\maketitle
 
 \section{Generador Fotovoltaico}
+\label{sec-1}
 
+\begin{frame}[label=sec-1-0-1]{Inclinación y Orientacion}
+$$\beta_{opt}=3.7+0.69 \cdot \left|\phi\right|$$
 
-\begin{frame}[plain]
-  \frametitle{Inclinación y Orientacion}
-
-\[
-\beta_{opt}=3.7+0.69 \cdot \left|\phi\right|\]
-
-
-\begin{center}
-  \includegraphics[scale=0.5]{../Figuras/PorcentajeProduccionEdificios}
-  \par\end{center}
-
-
+\includegraphics[width=.9\linewidth]{../figs/PorcentajeProduccionEdificios.pdf}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Pérdidas angulares según CTE}
+\begin{frame}[label=sec-1-0-2]{Modulos en serie}
+\begin{itemize}
+\item El inversor está diseñado para soportar una \alert{tensión máxima en la
+entrada}. Superarla puede conllevar la avería del equipo.
+\end{itemize}
 
-\[
-\mathrm{
-  \begin{cases}
-    100\cdot[1,2\cdot10^{-4}\cdot(\beta-\phi+10)^{2}+3,5\cdot10^{-5}\cdot\alpha^{2}]
-    & 15\degree<\beta<90\degree\\
-    100\cdot[1,2\cdot10^{-4}\cdot(\beta-\phi+10)^{2}] &
-    \beta<15\degree
-  \end{cases}}
-\]
+$$N_{s,max}:\, V_{ocG}(G=\SI{200}{\watt\per\meter\squared},\,
+T_{a}=\SI{-10}{\celsius})<V_{max,inv}$$
 
+\begin{itemize}
+\item Por otra parte, el algoritmo de \alert{búsqueda del MPP} se realiza en un
+rango de tensiones limitado. Para evitar pérdidas por trabajar en un
+punto alejado del MPP, la tensión del generador debe estar dentro de
+este rango.
+\end{itemize}
 
-\begin{center}
-  \begin{tabular}{>{\centering}m{3cm}>{\centering}m{3cm}cc}
-    \toprule 
-    \textrm{Caso} & \textrm{Orientación e inclinación} & \textrm{Sombras} & \textrm{Total}\tabularnewline
-    \midrule
-    \midrule 
-    \textrm{General } & \textrm{10} & \textrm{10} & \textrm{15}\tabularnewline
-    \midrule 
-    \textrm{Superposición} & \textrm{20} & \textrm{15} & 30\tabularnewline
-    \midrule 
-    \textrm{Integración arquitectónica} & 40 & 20 & 50\tabularnewline
-    \bottomrule
-  \end{tabular}
-  \par\end{center}
-
-
-\end{frame}
-\begin{frame}
-  \frametitle{Modulos en serie}
-  \begin{itemize}
-  \item El inversor está diseñado para soportar una \textbf{tensión
-      máxima en la entrada}. Superarla puede conllevar la avería del
-    equipo.
-  \item Por otra parte, el algoritmo de \textbf{búsqueda del MPP} se
-    realiza en un rango de tensiones limitado. Para evitar pérdidas
-    por trabajar en un punto alejado del MPP, la tensión del generador
-    debe estar dentro de este rango.\end{itemize}
-  \begin{block} {}
-
-\[
-N_{s,max}:\, V_{ocG}(G=\SI{200}{\watt\per\meter\squared},\,
-T_{a}=\SI{-10}{\celsius})<V_{max,inv}\]
-\[
-N_{s,mpp}:\, V_{mppG}(G_{stc},\,
+$$N_{s,mpp}:\, V_{mppG}(G_{stc},\,
 T_{a}=\SI{25}{\celsius})\in\left[V_{mppMIN},\,
-  V_{mppMAX}\right]_{INV}\]
-
-
-\end{block}
-
-\end{frame}
-\begin{frame}
-  \frametitle{Ramas en paralelo}
-
-  El fabricante del inversor elige los componentes para soportar una
-  \textbf{corriente máxima admisible}.
-
-  En general, el inversor es capaz de autoprotegerse ante valores
-  superiores a este umbral desplazando el punto de funcionamiento del
-  generador fuera del MPP.
-
-  No obstante, el diseñador del sistema debe elegir el número de ramas
-  en paralelo de forma que no se supere este umbral.
-  \begin{block} {}
-
-\[
-N_{p,max}:\, I_{scG}(\SI{1000}{\watt\per\meter\squared})<I_{max,INV}\]
-
-
-\end{block}
-
-\end{frame}
-\begin{frame}
-  \frametitle{Configuración del generador}
-
-  De los cálculos anteriores se obtiene una ventana de configuraciones
-  del generador que permiten un buen acoplamiento entre inversor y
-  generador.  Para elegir una configuración deben tenerse en cuenta
-  diferentes aspectos:
-  \begin{itemize}
-  \item Configuración eléctrica y ubicación física de los módulos en
-    la estructura.
-  \item La curva de eficiencia del inversor depende de la tensión de
-    entrada.
-  \item Inversión y rendimiento económicos.
-  \item Espacio disponible.
-  \item Relación de potencias de generador e inversor.
-  \end{itemize}
-
-\end{frame}
-\begin{frame}
-  \frametitle{Configuración eléctrica y estructura}
-  \begin{itemize}
-  \item Es recomendable elegir \textbf{series} compuestas por un
-    número de módulos que puedan ser ubicados en una \textbf{única
-      hilera de la estructura}.
-
-    \begin{itemize}
-    \item \textbf{Se facilita el trazado del cableado}: la propia
-      estructura puede servir como fijación auxiliar, se evitan
-      cruzamientos indeseados.
-    \item \textbf{Se minimiza la influencia de las sombras}: es muy
-      frecuente la aparición de sombras entre partes del generador o
-      entre seguidores, sombras de forma rectangular y que comienzan
-      afectando a las partes bajas de la estructura. Al cablear por
-      hileras, las sombras de las hileras bajas no afectan a las
-      hileras inmediatamente superiores.
-    \end{itemize}
-  \end{itemize}
-
-\end{frame}
-\begin{frame}
-  \frametitle{Potencia del generador}
-  \begin{itemize}
-  \item La potencia del generador fotovoltaico está relacionada
-    directamente con la \textbf{inversión económica} a realizar.
-  \item Por otra parte, la relación entre \textbf{energía generada} y
-    potencia nominal es aproximadamente lineal, y por tanto, los
-    \textbf{ingresos económicos} dependen casi linealmente de la
-    potencia del generador.
-  \item Por tanto, para decidir la potencia del generador
-    ($P_{g}^{*}=N_{s}\cdot N_{p}\cdot P_{m}^{*}$) debe tenerse en
-    cuenta el capital o financiación disponible, y el rendimiento
-    económico deseado.
-  \end{itemize}
-
-\end{frame}
-\begin{frame}
-  \frametitle{Potencia del generador}
-  \begin{itemize}
-  \item La potencia del generador es proporcional al área del
-    generador y al \textbf{terreno ocupado }(que también influye,
-    aunque en menor grado, en el cálculo económico). Por tanto, debe
-    tenerse en cuenta el espacio disponible (o el coste que se
-    pretende asumir por el uso de terreno).
-  \item Según el \textbf{tipo de sistema} (estático, seguimiento) se
-    debe elegir una relación de potencias de generador e inversor.
-  \end{itemize}
-
+  V_{mppMAX}\right]_{INV}$$
 \end{frame}
 
+\begin{frame}[label=sec-1-0-3]{Ramas en paralelo}
+\begin{itemize}
+\item El fabricante del inversor elige los componentes para soportar una \alert{corriente máxima admisible}.
+
+\item En general, el inversor es capaz de autoprotegerse ante valores superiores a este umbral desplazando el punto de funcionamiento del generador fuera del MPP.
+
+\item No obstante, el diseñador del sistema debe elegir el número de ramas en paralelo de forma que no se supere este umbral.
+\end{itemize}
+
+$$N_{p,max}:\, I_{scG}(\SI{1000}{\watt\per\meter\squared})<I_{max,INV}$$
+\end{frame}
+
+\begin{frame}[label=sec-1-0-4]{Configuración del generador}
+De los cálculos anteriores se obtiene un conjunto de configuraciones del generador que permiten un buen acoplamiento entre inversor y generador. 
+
+Para elegir una configuración deben tenerse en cuenta diferentes aspectos:
+
+\begin{itemize}
+\item Configuración eléctrica y ubicación física de los módulos en la
+estructura.
+
+\item La curva de eficiencia del inversor depende de la tensión de entrada.
+
+\item Inversión y rendimiento económicos.
+
+\item Espacio disponible.
+
+\item Relación de potencias de generador e inversor.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label=sec-1-0-5]{Configuración eléctrica y estructura}
+\begin{itemize}
+\item Es recomendable elegir \alert{series} compuestas por un número de módulos
+que puedan ser ubicados en una \alert{única hilera de la estructura}.
+
+\begin{itemize}
+\item \alert{Se facilita el trazado del cableado}: la propia estructura puede
+servir como fijación auxiliar, se evitan cruzamientos indeseados.
+
+\item \alert{Se minimiza la influencia de las sombras}: es muy frecuente la
+aparición de sombras entre partes del generador o entre
+seguidores, sombras de forma rectangular y que comienzan afectando
+a las partes bajas de la estructura. Al cablear por hileras, las
+sombras de las hileras bajas no afectan a las hileras
+inmediatamente superiores.
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label=sec-1-0-6]{Potencia del generador}
+\begin{itemize}
+\item La potencia del generador fotovoltaico está relacionada directamente
+con la \alert{inversión económica} a realizar.
+
+\item Por otra parte, la relación entre \alert{energía generada} y potencia
+nominal es aproximadamente lineal, y por tanto, los \alert{ingresos
+económicos} dependen casi linealmente de la potencia del generador.
+
+\item Por tanto, para decidir la potencia del generador
+($P_{g}^{*}=N_{s}\cdot N_{p}\cdot P_{m}^{*}$) debe tenerse en cuenta
+el capital o financiación disponible, y el rendimiento económico
+deseado.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label=sec-1-0-7]{Potencia del generador}
+\begin{itemize}
+\item La potencia del generador es proporcional al área del generador y al \alert{terreno ocupado} (que también influye, aunque en menor grado, en el    cálculo económico). Por tanto, debe tenerse en cuenta el espacio disponible (o el coste que se pretende asumir por el uso de terreno).
+
+\item Según el \alert{tipo de sistema} (estático, seguimiento) se debe elegir una relación de potencias de generador e inversor.
+\end{itemize}
+\end{frame}
 
 \section{Inversor}
+\label{sec-2}
 
+\begin{frame}[label=sec-2-0-1]{Curva de eficiencia}
+\begin{itemize}
+\item Eficiencia del inversor, $\eta_{inv} = P_{ac} / P_{dc}$
 
-\begin{frame}
-  \frametitle{Curva de eficiencia}
-
-  Para calcular la potencia entregada por el inversor a partir de la
-  potencia suministrada por el generador fotovoltaico se empleará la
-  curva de eficiencia del inversor, $\eta_{inv}$, definida como la
-  relación entre la potencia suministrada a la red eléctrica,
-  $P_{ac}$, y la potencia de entrada, $P_{dc}$. Esta relación puede
-  describirse con una función basada en tres coeficientes y la
-  normalización de la potencia de salida:
-
-\[
-\eta_{inv}=\frac{p_{o}}{p_{o}+k_{0}^{o}+k_{1}^{o}p_{o}+k_{2}^{o}p_{o}^{2}}\]
-donde $p_{o}=P_{ac}/P_{inv}$, y $k_{0}^{o}$, $k_{1}^{o}$ y $k_{2}^{o}$
-son parámetros adimensionales que definen el comportamiento eléctrico
-del inversor.
-
-
+\item Esta relación puede describirse con una función basada en tres coeficientes y la normalización de la potencia de salida, $p_{o}=P_{ac}/P_{inv}$: $$\eta_{inv}=\frac{p_{o}}{p_{o}+k_{0}^{o}+k_{1}^{o}p_{o}+k_{2}^{o}p_{o}^{2}}$$
+\end{itemize}
 \end{frame}
-\begin{frame}
-  \frametitle{Curva de eficiencia}
-  \begin{columns}[c]%{}
 
 
-    \column{3cm}
+\begin{frame}[label=sec-2-0-2]{Curva de eficiencia}
+$k_{0}^{o}=0.01$
 
-    $k_{0}^{o}=0.01$
+$k_{1}^{o}=0.025$
 
-    $k_{1}^{o}=0.025$
+$k_{2}^{o}=0.05$
 
-    $k_{2}^{o}=0.05$
-
-
-    \column{7cm}
-
-    \begin{center}
-      \includegraphics[scale=0.5]{../Figuras/CurvaInversor}
-      \par\end{center}
-
-  \end{columns}%{}
-
+\includegraphics[width=.9\linewidth]{../figs/CurvaInversor.pdf}
 \end{frame}
-\begin{frame}
-  \frametitle{Relación de potencias}
-  \begin{itemize}
-  \item Dado que la potencia entregada por el generador varía con las
-    condiciones meteorológicas, el inversor trabajará en diferentes
-    zonas de su curva de eficiencia.
-  \item Por tanto, una de las preguntas a responder es qué relación
-    debe existir entre la potencia del generador FV y el inversor.
-  \item Si esta relación es alta, el inversor trabajará con frecuencia
-    en la región de alta eficiencia, pero a cambio es posible que deba
-    limitar la potencia del generador para evitar superar su umbral de
-    corriente admisible.
-  \end{itemize}
 
+\begin{frame}[label=sec-2-0-3]{Relación de potencias}
+\begin{itemize}
+\item Dado que la potencia entregada por el generador varía con las condiciones meteorológicas, el inversor trabajará en diferentes zonas de su curva de eficiencia.
+
+\item Por tanto, una de las preguntas a responder es \alert{que relación debe existir entre la potencia del generador FV y el inversor}.
+
+\[F_{DI} = P_{g}^{*}/P_{inv}\]
+
+\item Si esta relación es alta, el inversor trabajará con frecuencia en la región de alta eficiencia, pero a cambio es posible que deba limitar la potencia del generador para evitar superar su umbral de corriente admisible.
+\end{itemize}
 \end{frame}
-\begin{frame}
-  \frametitle{Relación de potencias}
-  \begin{itemize}
-  \item En \textbf{sistemas de integración arquitectónica}, donde la
-    orientación e inclinación no son óptimas, esta probabilidad puede
-    ser baja. Así, puede considerarse necesario sobredimensionar el
-    generador FV respecto al inversor
-    ($P_{g}^{*}/P_{inv}\in\left[1;1.4\right]$).
 
-    \begin{itemize}
-    \item CTE-HE5-3.2.3.2: {}``la potencia del inversor será como
-      mínimo el 80\% de la potencia pico real del generador
-      fotovoltaico''
-    \end{itemize}
-  \item En \textbf{sistemas de seguimiento} esta probabilidad suele
-    ser alta.  Se recomiendan inversores de potencia similar a la del
-    generador ($P_{g}^{*}/P_{inv}\in\left[1;1.2\right]$)
-  \end{itemize}
+\begin{frame}[label=sec-2-0-4]{Relación de potencias}
+\begin{itemize}
+\item En \alert{sistemas de integración arquitectónica}, donde la orientación e inclinación no son óptimas, esta probabilidad puede ser baja. Así, puede considerarse necesario sobredimensionar el generador FV respecto al inversor ($P_{g}^{*}/P_{inv}\in\left[1;1.4\right]$).
 
+\begin{itemize}
+\item CTE-HE5-3.2.3.2: \guillemotleft{}la potencia del inversor será como mínimo el 80\% de la potencia pico real del generador fotovoltaico\guillemotright{}
+\end{itemize}
+
+\item En \alert{sistemas de seguimiento} esta probabilidad suele ser alta. Se recomiendan inversores de potencia similar a la del generador  ($P_{g}^{*}/P_{inv}\in\left[1;1.2\right]$)
+\end{itemize}
 \end{frame}
-\begin{frame}
-  \frametitle{Relación de potencias}
-  \begin{block} {}
 
-    No obstante, es posible demostrar que el valor de esta relación no
-    es tan crítico como \textbf{elegir un inversor con buena curva de
-      eficiencia}.
-
-  \end{block}
+\begin{frame}[label=sec-2-0-5]{Relación de potencias}
+No obstante, es posible demostrar que el valor de esta relación no es tan crítico como \alert{elegir un inversor con buena curva de eficiencia}.
 \end{frame}
 
 \section{Cableado}
+\label{sec-3}
 
+\begin{frame}[label=sec-3-0-1]{Características básicas}
+\begin{itemize}
+\item Diseño del cableado
 
-\begin{frame}
-  \frametitle{Características básicas}
-  \begin{columns}[c]%{}
+\begin{itemize}
+\item Criterio de caída de tensión
 
+\item En sistemas de gran tamaño reducir bucles
 
-    \column{6cm}
-    \begin{itemize}
-    \item Diseño del cableado
+\item Diseño de estructura e integración: habilitar un camino para
+cableado
+\end{itemize}
 
-      \begin{itemize}
-      \item Criterio de caída de tensión
-      \item En sistemas de gran tamaño reducir bucles
-      \item Diseño de estructura e integración: habilitar un camino
-        para cableado
-      \end{itemize}
-    \item Tipo de cables
+\item Tipo de cables
 
-      \begin{itemize}
-      \item Doble aislamiento
-      \item Poliolefínas
-      \end{itemize}
-    \end{itemize}
+\begin{itemize}
+\item Doble aislamiento
 
-    \column{6cm}
-
-    \includegraphics[scale=0.6]{../Fotos/PhotocampaCableado}
-
-  \end{columns}%{}
-
+\item Poliolefínas
+\end{itemize}
+\end{itemize}
+\includegraphics[height=0.5\textheight]{../figs/PhotocampaCableado.jpg}
 \end{frame}
-\begin{frame}
-  \frametitle{Cálculo}
 
-  Habitualmente se descarta el criterio termico y se emplea el
-  criterio de caida de tensión (RBT ITC-BT-07):\begin{eqnarray*}
+\begin{frame}[label=sec-3-0-2]{Cálculo}
+\begin{itemize}
+\item Habitualmente se descarta el criterio termico y se emplea el criterio de caida de tensión (RBT ITC-BT-07):
+\end{itemize}
+
+$$\begin{aligned}
     S_{dc} & = & \frac{2\cdot L_{dc}\cdot I_{dc}}{56\cdot\Delta V_{dc}}\\
     S_{1ac} & = & \frac{2\cdot L_{1ac}\cdot I_{1ac}}{56\cdot\Delta V_{1ac}}\\
     S_{3ac} & = & \frac{\sqrt{3}\cdot L_{3ac}\cdot
-      I_{3ac}}{56\cdot\Delta V_{3ac}}\end{eqnarray*}
+      I_{3ac}}{56\cdot\Delta V_{3ac}}\end{aligned}$$
 
+\begin{itemize}
+\item En general, se suele aceptar una caída máxima de tensión $\SI{1.5}{\percent}$ de la tensión nominal.
 
-  En general, se suele aceptar una caída máxima de tensión
-  $\SI{1.5}{\percent}$ de la tensión nominal. Para aplicar
-  correctamente este porcentaje es importante caer en la cuenta de que
-  cada zona (DC y AC) tiene su propia tensión nominal.
-
-
-\end{frame}
-\begin{frame}
-  \frametitle{Cálculo}
-  \begin{block} {Ejemplo}
-
-    Por ejemplo, en una instalación que conduce $\SI{75}{\ampere}$ a
-    la salida de un inversor trifásico, situado este a
-    $\SI{100}{\meter}$ de la conexión a red, se deberá utilizar un
-    cable de sección
-    $S=\frac{\sqrt{3}\cdot100\cdot75}{56\cdot\SI{1.5}{\percent}\cdot400}=\SI{38.66}{\milli\meter\squared}$.
-
-    Dado que la sección de los cables está normalizada, se deberá
-    optar por la sección inmediatamente superior, y por tanto la
-    conexión del inversor a la red se realizará con tres cables de
-    sección $S=\SI{50}{\milli\meter\squared}$.
-
-  \end{block}
-
-\end{frame}
-\begin{frame}
-  \frametitle{Cálculo}
-  \begin{block} {}
-
-    Con este resultado, es necesario comprobar que la intensidad de
-    diseño es inferior a la intensidad máxima admisible del cable para
-    sus condiciones de servicio, según las tablas de la ITC-BT-07.
-
-    No obstante, las secciones que resultan del criterio de caída de
-    tensión aplicado a los sistemas fotovoltaicos habitualmente son
-    sobradamente capaces de conducir la corriente del sistema.
-
-  \end{block}
-
-\end{frame}
-\begin{frame}
-  \frametitle{Cálculo}
-
-  Suponiendo que en una planta con varios inversores trifásicos existe
-  la posibilidad de ubicar los inversores debajo del generador FV
-  (\emph{distribución en alterna}) o en un centro específico junto al
-  punto de conexión a red (\emph{distribución en continua}),
-  \textbf{¿cuál es la tensión de trabajo en continua que permite optar
-    por una distribución en continua?}
-
-
+\item Para aplicar correctamente este porcentaje es importante caer en la cuenta de que \alert{cada zona (DC y AC) tiene su propia tensión nominal}.
+\end{itemize}
 \end{frame}
 
+\begin{frame}[label=sec-3-0-3]{Cálculo}
+\begin{block}{Ejemplo}
+En una instalación que conduce $\SI{75}{\ampere}$ a la salida de un inversor trifásico, situado este a $\SI{100}{\meter}$ de la
+conexión a red, se deberá utilizar un cable de sección $S=\frac{\sqrt{3}\cdot100\cdot75}{56\cdot\SI{1.5}{\percent}\cdot400}=\SI{38.66}{\milli\meter\squared}$.
+
+Dado que la sección de los cables está normalizada, se deberá optar por la sección inmediatamente superior, y por tanto la conexión del inversor a la red se realizará con tres cables de sección $S=\SI{50}{\milli\meter\squared}$.
+\end{block}
+\end{frame}
+
+\begin{frame}[label=sec-3-0-4]{Intensidad máxima admisible}
+\begin{itemize}
+\item Con este resultado, es necesario comprobar que la intensidad de diseño es inferior a la intensidad máxima admisible del cable para sus condiciones de servicio, según las tablas de la ITC-BT-07.
+
+\item No obstante, las secciones que resultan del criterio de caída de tensión aplicado a los sistemas fotovoltaicos habitualmente son sobradamente capaces de conducir la corriente del sistema.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label=sec-3-0-5]{Continua vs. Alterna}
+Suponiendo que en una planta con varios inversores trifásicos existe la
+posibilidad de ubicar los inversores debajo del generador FV
+(\emph{distribución en alterna}) o en un centro específico junto al punto de
+conexión a red (\emph{distribución en continua}), \alert{¿cuál es la tensión de
+trabajo en continua que permite optar por una distribución en continua?}
+\end{frame}
+% Emacs 24.4.1 (Org mode 8.2.7c)
 \end{document}
